@@ -91,5 +91,10 @@ $config['managesieve_vacation'] = 0;
 // to define interval in seconds here (as a string), e.g. "3600s".
 $config['managesieve_vacation_interval'] = 0;
 
+// Some servers require vacation :addresses to be filled with all
+// user addresses (aliases). This option enables automatic filling
+// of these on initial vacation form creation.
+$config['managesieve_vacation_addresses_init'] = false;
+
 // Supported methods of notify extension. Default: 'mailto'
 $config['managesieve_notify_methods'] = array('mailto');
