@@ -56,7 +56,7 @@ $labels['add'] = 'Add';
 $labels['del'] = 'Delete';
 $labels['sender'] = 'Sender';
 $labels['recipient'] = 'Recipient';
-$labels['vacationaddr'] = 'My additional e-mail address(es):';
+$labels['vacationaddr'] = 'My e-mail addresses:';
 $labels['vacationdays'] = 'How often send messages (in days):';
 $labels['vacationinterval'] = 'How often send messages:';
 $labels['vacationreason'] = 'Message body (vacation reason):';
@@ -172,7 +172,7 @@ $labels['vacation.end'] = 'Vacation end';
 $labels['vacation.status'] = 'Status';
 $labels['vacation.on'] = 'On';
 $labels['vacation.off'] = 'Off';
-$labels['vacation.addresses'] = 'My additional addresses';
+$labels['vacation.addresses'] = 'My e-mail addresses';
 $labels['vacation.interval'] = 'Reply interval';
 $labels['vacation.after'] = 'Put vacation rule after';
 $labels['vacation.saving'] = 'Saving data...';
@@ -181,6 +181,7 @@ $labels['vacation.keep'] = 'Keep';
 $labels['vacation.discard'] = 'Discard';
 $labels['vacation.redirect'] = 'Redirect to';
 $labels['vacation.copy'] = 'Send copy to';
+$labels['filladdresses'] = 'Fill with all my addresses';
 $labels['arialabelfiltersetactions'] = 'Filter set actions';
 $labels['arialabelfilteractions'] = 'Filter actions';
 $labels['arialabelfilterform'] = 'Filter properties';
