@@ -194,6 +194,10 @@ td.rowtargets div.adv span.label
   min-width: 70px;
 }
 
+td.rowtargets div a {
+  margin-left: 10px;
+}
+
 input.disabled, input.disabled:hover
 {
   color: #999999;
@@ -312,7 +316,7 @@ a.button.disabled
 /* revert larry style button */
 #filter-form input.button
 {
-  padding: inherit;
+  padding: 4px 12px;
 }
 
 fieldset
@@ -332,6 +336,7 @@ fieldset
   display: inline-block;
   max-height: 59px;
   overflow-y: auto;
+  vertical-align: middle;
 }
 
 td.rowtargets > span.listarea
@@ -447,4 +452,8 @@ body.iframe.mail #filter-form
 
 #vacationform td.vacation {
   white-space: nowrap;
+}
+
+#vacationform input.button {
+  margin-left: 10px;
 }
