@@ -1,3 +1,4 @@
+- Add option to prepopulate vacation addresses on form init (#1490030)
 - Add option to define default vacation interval
 - Fix missing position idicator in Larry skin when dragging a filter
 - Fix incorrect filter data after filter delete (#1490356)
